<resources>
    <string name="app_name">BossBattleCardGame</string>
    <string name="btn_start_game">Start Game</string>
    <string name="title_boss_battle_card_game">Boss Battle Card Game</string>
    <string name="btn_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="choose_build">Choose build</string>
    <string name="build_heal_text">Heal</string>
    <string name="build_balanced_text">Balanced</string>
    <string name="build_defensive_text">Defensive</string>
    <string name="build_damage_text">Damage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CardAttackText">Attack</string>
    <string name="CardShieldText">Shield</string>
    <string name="CardHealText">Heal</string>
    <string name="you_won_round">You Won</string>
    <string name="btn_nextboss">Next boss</string>
    <string name="btn_try_again">Try again</string>
    <string name="text_you_died">You died</string>
    <string name="game_won_text">You won and defeated all bosses</string>
    <string name="back_to_main_menu">Back to main menu</string>
</resources>