<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/btn_green"
        android:fontFamily="@font/roboto_medium"
        android:padding="12dp"
        android:text="@string/main_menu"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iceberg"
        android:text="@string/choose_build"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame"
        app:layout_constraintVertical_bias="0.073"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.231">

        <RadioButton
            android:id="@+id/radio_damage"
            style="@style/BuildRadioButtonStyle"
            android:text="@string/build_damage_text" />

        <RadioButton
            android:id="@+id/radio_defensive"
            style="@style/BuildRadioButtonStyle"
            android:text="@string/build_defensive_text" />

        <RadioButton
            android:id="@+id/radio_balanced"
            style="@style/BuildRadioButtonStyle"
            android:text="@string/build_balanced_text" />

        <RadioButton
            android:id="@+id/radio_heal"
            style="@style/BuildRadioButtonStyle"
            android:text="@string/build_heal_text" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>