<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/bg_dark">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/title_boss_battle_card_game"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/btn_green"
        android:fontFamily="@font/roboto_medium"
        android:padding="12dp"
        android:text="@string/btn_start_game"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnBuildSelection"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/btn_green"
        android:fontFamily="@font/roboto_medium"
        android:padding="12dp"
        android:text="@string/btn_settings"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
