<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark">

    <FrameLayout
        android:id="@+id/bossFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/playerFragmentContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1" />

    <FrameLayout
        android:id="@+id/playerFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bossFragmentContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"/>


    <View
        android:id="@+id/overlayBossDefeated"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/OverlayBackgroundView"/>

    <TextView
        android:id="@+id/textBossDefeated"
        android:text="@string/you_won_round"
        style="@style/OverlayTitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnNextBoss"
        android:backgroundTint="@color/btn_green"
        android:text="@string/btn_nextboss"
        style="@style/OverlayPrimaryButton"
        app:layout_constraintTop_toBottomOf="@id/textBossDefeated"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <View
        android:id="@+id/overlayPlayerDefeated"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/OverlayBackgroundView"/>

    <TextView
        android:id="@+id/textPlayerDefeated"
        android:text="@string/text_you_died"
        style="@style/OverlayTitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnTryAgain"
        android:backgroundTint="@color/hp_red_darker"
        android:text="@string/btn_try_again"
        style="@style/OverlayPrimaryButton"
        app:layout_constraintTop_toBottomOf="@id/textPlayerDefeated"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/overlayGameWon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/OverlayBackgroundView"/>

    <TextView
        android:id="@+id/textGameWon"
        style="@style/OverlayTitleText"
        android:text="@string/game_won_text"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnWonGame"
        android:backgroundTint="@color/btn_green"
        android:text="@string/back_to_main_menu"
        style="@style/OverlayPrimaryButton"
        app:layout_constraintTop_toBottomOf="@id/textGameWon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>