<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment"
    tools:background="@color/bg_dark">


    <TextView
        android:id="@+id/textPlayerBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/iceberg"
        android:textColor="@color/white_A70"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="Build: -"
        app:layout_constraintBottom_toTopOf="@id/viewPlayerHp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewPlayerHp"
        android:layout_width="340dp"
        android:layout_height="36dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/hp_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <View
        android:id="@+id/viewPlayerHpFill"
        android:layout_width="340dp"
        android:layout_height="36dp"
        android:background="@color/hp_green"
        app:layout_constraintBottom_toBottomOf="@+id/viewPlayerHp"
        app:layout_constraintStart_toStartOf="@+id/viewPlayerHp"
        app:layout_constraintTop_toTopOf="@+id/viewPlayerHp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textPlayerHpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        style="@style/HpValueText"
        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
        app:layout_constraintStart_toStartOf="@id/viewPlayerHp"
        app:layout_constraintEnd_toEndOf="@id/viewPlayerHp"/>

    <Button
        android:id="@+id/playerAttack"
        style="@style/PlayerCards"
        android:layout_width="128dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/card_red"
        android:text="@string/CardAttackText"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playerShield"
        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/playerShield"
        style="@style/PlayerCards"
        android:layout_width="128dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/card_blue"
        android:text="@string/CardShieldText"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/playerAttack"
        app:layout_constraintEnd_toStartOf="@+id/playerHeal"
        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/playerHeal"
        style="@style/PlayerCards"
        android:layout_width="128dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/card_lime_green"
        android:text="@string/CardHealText"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/playerShield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>